--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,24 +5,34 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <div class="field">
-        <%= f.label :full_name %><br />
+        <%= f.label :full_name, "Full name*" %><br />
         <%= f.text_field :full_name, autofocus: true, :class => "form-control" %>
       </div>
       <div class="field">
-        <%= f.label :email %><br />
+        <%= f.label :email, "Email*" %><br />
         <%= f.email_field :email, :class => "form-control" %>
       </div>
       <div class="field">
-        <%= f.label :password %>
+        <%= f.label :organization, "Organization*" %><br />
+        <%= f.text_field :organization, :class => "form-control" %>
+      </div>
+      <div class="field">
+        <%= f.label :location, "Location*" %><br />
+        <%= f.text_field :location, :class => "form-control" %>
+      </div>
+      <div class="field">
+        <%= f.label :password, "Password*" %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
       </div>
       <div class="field">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation, "Confirm password*" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %><br>
       </div>
+      * required field
+      <br>
       <div class="actions text-center">
         <%= f.submit "Sign up", :class => "btn btn-primary" %>
       </div>
