--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="container edit-user-profile">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
       <h2>Profile</h2>
       <%= form_for @user, url: user_path, html: { multipart: true } do |f| %>
         <div class="avatar-upload-container clearfix">
-          <%= image_tag @user.avatar.url(:thumb), class: "thumb-avatar" %>
+          <% thumb_style = @user.avatar_file_name ? '' : 'height: 100px;' %>
+          <%= image_tag @user.avatar.url(:thumb), class: "thumb-avatar", style: thumb_style %>
           <div class="avatar-upload">
             <%= f.label :avatar, "Change Image", class: "btn btn-default change-avatar-btn" %>
             <%= f.file_field :avatar %>
@@ -16,10 +17,25 @@
           <%= f.label :full_name %><br />
           <%= f.text_field :full_name, autofocus: true, :class => "form-control" %>
         </div>
-        <br>
         <div class="field">
           <%= f.label :email %><br />
+          <p class="small">An e-mail confirmation email will be sent if change email.</p>
           <%= f.email_field :email, :class => "form-control" %>
+        </div>
+        <div class="field">
+          <%= f.label :organization %><br />
+          <%= f.text_field :organization, :class => "form-control" %>
+        </div>
+        <div class="field">
+          <%= f.label :location %><br />
+          <%= f.text_field :location, :class => "form-control" %>
+        </div>
+        <div class="field">
+          <%= f.label :bio, "Bio (100-1000 characters)" %><br />
+          <% if !@user.bio %>
+           <p class="small">Required for posting a workshop.</p>
+          <% end %>
+          <%= f.text_area :bio, :class => "form-control", :rows => "5" %>
         </div>
         <br>
         <div class="actions">
