--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -18,7 +18,7 @@
     	Location <span class="required-text">(required):</span>
     <% end %>
     <br />
-    <%= f.text_field :location, :class => "form-control" %>
+    <%= f.text_field :location, :class => "form-control location-input" %>
   </div>
   <div class="field">
     <%= f.label :image do %>
