--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -114,11 +114,11 @@ footer {
     }
   }
   .navbar-collapse {
-    // style navbar collapse when click hamburger button
 
+    // style navbar collapse when click hamburger button
     @media (max-width: 767px) {
-      background-color: #fff !important;
-      color: #2780e3 !important;
+      background-color: #2780e3 !important;
+      // color: #2780e3 !important;
       margin-top: 10px;
       box-shadow: 2px 2px 2px #b9b9b9;
       -webkit-box-shadow: 2px 2px 2px #b9b9b9;
@@ -132,7 +132,7 @@ footer {
       }
       .navbar-nav .open .dropdown-menu > li > a {
         background-color: #fff;
-        color: #2780e3;
+        color: #2780e3 !important;
       }
       .navbar-nav .open .dropdown-menu > li > a:hover, 
       .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -142,9 +142,13 @@ footer {
     }
   }
 
+#bs-example-navbar-collapse-1 {
+    color: #2780e3 !important;
+}
+
   .navbar-collapse a:hover {
-     background-color: #e9e9e9 !important;
-     color: #2780e3 !important;
+     // background-color: #fff!important;
+     // color: #2780e3 !important;
   }
   .navbar-nav > .open > a, 
   .navbar-nav > .open > a:hover, 
@@ -155,9 +159,7 @@ footer {
   }
   // end overrided mobile navbar styling
 }
-.navbar-nav >li > a {
-	color: #1D86FF !important;
-}
+
 
 .navbar-custom li a {
 	line-height: 59px;
@@ -179,7 +181,7 @@ footer {
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: #2780e3;
-    background-color: #e9e9e9;
+    background-color: #fff;
 }
 
 .navbar-toggle {
