--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -6,10 +6,13 @@
 			<p>Interested in posting a talk or finding a talk that's not listed? Contact us at <a href="mailto:hello.bigtalker@gmail.com?Subject=Hello" target="_top">hello.bigtalker@gmail.com</a></p>
 			<p>Big Talker is currently in Beta.</p>
 			<div class="text-center">
-				<img src="http://geekadelphia.com/wp-content/uploads/2012/11/gen-assembly.jpg" class="img-responsive" alt="workshop photo">
+				<img src="https://ga-core-production-herokuapp-com.global.ssl.fastly.net/assets/controllers/education/immersives/shared/915-lounge-245324d38b3ae7bd8fc11241358a0937.jpg" class="img-responsive center-block" alt="workshop photo">
+			</div>
+			<div class="text-center">
 				<p class="small about-footer">Built with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by a Web Development Immersive (WDI) team
 				<br><a href="https://generalassemb.ly/san-francisco" target="_blank">General Assembly</a> - San Francisco</p>
 			</div>
 		</div>
 	</div>
+</div>
 </div>
