--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -47,8 +47,8 @@
 						    <%= f.label :message %><br>
 						    <%= f.text_area :content, rows: "7", required: true, class: "form-control" %>
 						  </div>
-						  <div class="actions form-group">
-						    <%= f.submit 'Send', class: 'button btn-primary form-control' %>
+						  <div class="actions form-group text-center">
+						    <%= f.submit 'Send', class: 'btn btn-inline-block btn-primary' %>
 						  </div>
 						</div>
 					</div>
