--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -2,7 +2,7 @@
 	<section id="hero-image">
 		<div class="jumbotron">
 			<h1>Inspire Your Team</h1>
-			<h2>Book a game-changing onsite training session for your organization</h2>
+			<h2>Book a game-changing onsite speaker for your organization</h2>
 			<% if current_user %>
 			<a class="btn btn-primary btn-lg" id="btn-signup" href="/workshops">SEARCH TALKS</a>
 			<% else %>
