--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
   </head>
   <body>
+    <%= params %>
     <div class="nav-and-yield">
       <!--Nav bar -->
       <nav class="navbar navbar-inverse navbar-custom navbar-static-top">
@@ -36,30 +37,34 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about">About</a></li>
-            <li><%= link_to "Talks", workshops_path %></li>
-            <li><%= link_to "Contact", contact_path %></li>
+            <li><%= link_to "About", about_path, class: "#{params[:action] == 'about' ? 'btn btn-default' : ''}" %></li>
+            <li><%= link_to "Talks", workshops_path, class: "#{params[:controller] == "workshops" and params[:action] == "index" ? 'btn btn-default' : ''}" %></li>
+            <li><%= link_to "Contact", contact_path, class: "#{params[:action] == 'contact' ? 'btn btn-default' : ''}" %></li>
             <!--  </ul> -->
             <!-- <ul class="nav navbar-nav navbar-right"> -->
             <% if current_user %>
-            <li><%= link_to "Post a Talk", new_workshop_path, class:"btn btn-default" %> </li>
+            <li>
+              <%= link_to new_workshop_path, class: "#{params[:controller] == "workshops" and params[:action] == "new" ? 'btn btn-default' : ''} #{params[:controller] == "sites" and params[:action] == "index" ? 'btn btn-default' : ''}" do %>
+                <%= fa_icon("pencil") %> Post a Talk
+              <% end %>
+            </li>
             <li class="inbox-li">
-              <%= link_to mailbox_inbox_path do %>
+              <%= link_to mailbox_inbox_path, class: "#{params[:controller] == "mailbox" and params[:action] == "inbox" ? 'btn btn-default' : ''}" do %>
               <%= fa_icon "envelope", id: "envelope" %> <span style="<%= unread_messages_count > 0 ? 'margin-left: 3px;' : ''%>">Inbox</span>
               <% if unread_messages_count > 0 %>
               <span id="inbox-notification"><%= unread_messages_count %></span>
               <% end %>
               <% end %>
             </li>
-            <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
+            <li><a class="dropdown-toggle <%= params[:controller] == "users" and params[:action] == "show" and current_user.slug == params[:id] ? 'btn btn-default' : '' %>" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", user_path(current_user) %></li>
               <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
           <% else %>
-          <li><%= link_to "Sign Up", signup_path, class: "btn btn-default" %></li>
-          <li><%= link_to "Sign In", login_path %></li>
+          <li><%= link_to "Sign Up", signup_path, class: "#{params[:controller] == "devise/registrations" and params[:action] == "new" ? 'btn btn-default' : ''} #{params[:controller] == "sites" and params[:action] == "index" ? 'btn btn-default' : ''}" %></li>
+          <li><%= link_to "Sign In", login_path, class: "#{params[:controller] == "devise/sessions" and params[:action] == "new" ? 'btn btn-default' : ''}" %></li>
           <% end %>
         </ul>
       </div>
