--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -6,14 +6,16 @@
 			<a class="btn btn-primary btn-lg" id="btn-signup" href="/workshops">SEARCH TALKS</a>
 		</div>
 	</section>
+	
 	<!-- Search Bar -->
 	<%= render "search_bar" %>
+
 	<!-- Featured Talks -->
 	<h1 class="text-center">Featured Talks</h1>
 	<div class="workshop-container">
 		<div class="row">
 			<% @featured_workshops.each do |workshop| %>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-4 col-lg-4">
 					<div class="thumbnail featured-workshop">
 						<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img vertical-align" %>
 						<div class="featured-workshop-title-wrapper">
@@ -35,8 +37,7 @@
 							</div>
 					</div>
 				</div>
-<!-- 			</div>
- -->			<% end %>
+			<% end %>
 		</div>
 	</div><hr>
 	<!-- End Featured Workshops -->
